--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<h1>Hello World</h1>
+<h1>You have been coordially invited to visit my page</h1>
+
+<p>These are my current projects:</p>
+
+<h2>Trash of the Week Project</h2>
+
+<p>TWP - Main Page</p>
