--- a/twp-demo.html
+++ b/twp-demo.html
@@ -61,15 +61,15 @@
 	
 	<h2 id ="sec-gallery">Gallery</h2>
 	
-	<img src="Gallery Images/IMG_1223.jpg" width="400px">
-	<img src="Gallery Images/IMG_1224.jpg" width="400px">
-	<img src="Gallery Images/IMG_1225.jpg" width="400px">
-	<img src="Gallery Images/IMG_1226.jpg" width="400px">
-	<img src="Gallery Images/IMG_1227.jpg" width="400px">
-	<img src="Gallery Images/IMG_1228.jpg" width="400px">
-	<img src="Gallery Images/IMG_1229.jpg" width="400px">
-	<img src="Gallery Images/IMG_1230.jpg" width="400px">
-	<img src="Gallery Images/IMG_1231.jpg" width="400px">
+	<img src="images/IMG_1223.jpg" width="400px">
+	<img src="images/IMG_1224.jpg" width="400px">
+	<img src="images/IMG_1225.jpg" width="400px">
+	<img src="images/IMG_1226.jpg" width="400px">
+	<img src="images/IMG_1227.jpg" width="400px">
+	<img src="images/IMG_1228.jpg" width="400px">
+	<img src="images/IMG_1229.jpg" width="400px">
+	<img src="images/IMG_1230.jpg" width="400px">
+	<img src="images/IMG_1231.jpg" width="400px">
 	
 	<p><a href="#">Return to top</a></p>
 	
@@ -195,7 +195,7 @@
 	
 	<h2 id ="sec-author">About the Author</h2>
 	
-	<img src="Gallery Images/IMG_9911.jpg" width="200">
+	<img src="images/IMG_9911.jpg" width="200">
 	
 	<p>Hi! My name is Max and I am a junior at Rutgers University studying Computer Science + Information Technology and Informatics with a minor in Women's Gender and Sexuality Studies. In my free time I like to crochet, knit, listen to music, draw, watch horror movies, and play video games. I'm from northern New Jersey, born and raised. For high school I went to a tech school where you become specialized in a concentration so I have prior programming knowledge. I learned how to program in Python, JavaScript, Java, HTML, and C# in high school and when I started college I learned more Java, C, and Linux. Other than my programming skills, I like to keep myself well-rounded and do humanities/art/creative classes because I think the skills are very important. I am also part of the executive board for Queer and Asian (secretary) and Triota Honor Society (vice president), as well as a graphic design associate for the Rutgers Esports Club. In general, I like combining many different aspects of my interests into the work I produce.</p>
 	
