--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <h1>You have been coordially invited to visit my page</h1>
 
+<--! img src="" -->
+
 <p>These are my current projects:</p>
 
 <h2>Trash of the Week Project</h2>
