--- a/twp-demo.html
+++ b/twp-demo.html
@@ -3,11 +3,55 @@
 <head>
 <meta charset="utf-8">
 <title>Trash of the Week | Week 59</title>
+	<style>
+		body{
+			margin:0;
+			padding:0;
+			color:#2a2a2a;
+			background: #fe5d26;
+			font-family: verdana, helvetica, arial, sans-sarif;
+			font-size: 20px;
+			line-height: 150%;
+			
+		}
+		h1{
+			align-content: center;
+			background: #c1dbb3;
+			color:white;
+			
+			font-size:65px;
+			font-style: oblique;
+			line-height: 150%;
+			letter-spacing: 4px;
+			
+			height:300px;
+			width: 80%;
+			border:solid 8px #7ebc89;
+			padding: 60px;
+			margin-left: auto;
+			margin-right: auto;
+		}
+		.wrapper {
+			background: #ffffff;
+			width: 972px;
+			margin-left: auto;
+			margin-right: auto;
+			padding: 20px 40px;
+		}
+	</style>
 </head>
 
 <body>
-	<h1>Week 59<br><em>Cold Weather and Craft Supplies</em></h1>
+	<br>
+	<a href="https://maxmendez13.github.io/webauthoringsp25-maxm/" style="font-family: verdana, helvetica, arial, sans-sarif; background:#FAEDCA; border:solid 5px #F2C078; color:black;">Home Page</a>
+	<h1>Week 59:<br><em>Cold Weather &<br> Craft Supplies</em></h1>
+	<div class = "wrapper">
 	
+		
+		
+	<img src="images/headerIMG.jpeg" width="950px" style="align-content: center;padding: 10px">
+		
+		
 	<nav>
 		<a href="#sec-preface">Preface</a>  |
 		<a href="#sec-overview">Overview</a>  |
@@ -200,6 +244,6 @@
 	<p>Hi! My name is Max and I am a junior at Rutgers University studying Computer Science + Information Technology and Informatics with a minor in Women's Gender and Sexuality Studies. In my free time I like to crochet, knit, listen to music, draw, watch horror movies, and play video games. I'm from northern New Jersey, born and raised. For high school I went to a tech school where you become specialized in a concentration so I have prior programming knowledge. I learned how to program in Python, JavaScript, Java, HTML, and C# in high school and when I started college I learned more Java, C, and Linux. Other than my programming skills, I like to keep myself well-rounded and do humanities/art/creative classes because I think the skills are very important. I am also part of the executive board for Queer and Asian (secretary) and Triota Honor Society (vice president), as well as a graphic design associate for the Rutgers Esports Club. In general, I like combining many different aspects of my interests into the work I produce.</p>
 	
 	<p>Here is a link to my Github: <a href="https://github.com/maxmendez13">maxmendez13</a></p>
-	
+	</div> <!-- wrapper -->
 </body>
 </html>
