--- a/twp-demo.html
+++ b/twp-demo.html
@@ -9,7 +9,7 @@
 			padding:0;
 			color:#2a2a2a;
 			background: #fe5d26;
-			font-family: verdana, helvetica, arial, sans-sarif;
+			font-family: helvetica, arial, sans-sarif;
 			font-size: 20px;
 			line-height: 150%;
 			
@@ -18,11 +18,13 @@
 			align-content: center;
 			background: #c1dbb3;
 			color:white;
+			font-weight: bold;
 			
-			font-size:65px;
+			font-size:350%;
 			font-style: oblique;
 			line-height: 150%;
 			letter-spacing: 4px;
+			text-align: center;
 			
 			height:300px;
 			width: 80%;
@@ -30,6 +32,29 @@
 			padding: 60px;
 			margin-left: auto;
 			margin-right: auto;
+		}
+		nav{
+			text-align: center;
+    		margin-bottom: 30px;
+    		padding: 15px;
+            background: linear-gradient(135deg, #FAEDCA, #F2C078);
+    		border-radius: 10px;
+    		box-shadow: #FE5D26 10px 10px;
+		}
+		a {
+			text-decoration: none;
+			color:black
+		}
+		x {
+			font-family: helvetica, arial, sans-sarif;
+			display:inline-block;
+			width:15%;
+			height:10%;
+			background-color:antiquewhite;
+			border:3px solid #A08A69;
+		}
+		x:hover{
+			background:white;
 		}
 		.wrapper {
 			background: #ffffff;
@@ -43,8 +68,8 @@
 
 <body>
 	<br>
-	<a href="https://maxmendez13.github.io/webauthoringsp25-maxm/" style="font-family: verdana, helvetica, arial, sans-sarif; background:#FAEDCA; border:solid 5px #F2C078; color:black;">Home Page</a>
-	<h1>Week 59:<br><em>Cold Weather &<br> Craft Supplies</em></h1>
+	<a href="https://maxmendez13.github.io/webauthoringsp25-maxm/" style="font-family: helvetica, arial, sans-sarif; background:#FAEDCA; width:100px; border:solid 5px #F2C078; color:black; margin:10px;">Home Page</a>
+	<h1>Week 59<br><em>Cold Weather & Craft Supplies</em></h1>
 	<div class = "wrapper">
 	
 		
@@ -53,11 +78,11 @@
 		
 		
 	<nav>
-		<a href="#sec-preface">Preface</a>  |
-		<a href="#sec-overview">Overview</a>  |
-		<a href="#sec-gallery">Gallery</a>  |
-		<a href="#sec-item-data">Item Data</a>  |
-		<a href="#sec-coda">Coda</a>
+		<x><a href="#sec-preface">Preface</a></x>  |
+		<x><a href="#sec-overview">Overview</a></x>  |
+		<x><a href="#sec-gallery">Gallery</a></x>  |
+		<x><a href="#sec-item-data">Item Data</a></x>  |
+		<x><a href="#sec-coda">Coda</a></x>
 	</nav>
 	
 	<h2 id ="sec-preface">Preface</h2>
@@ -77,7 +102,7 @@
 	<p>
 	This week’s discarded items tell a story of small, everyday objects that often go unnoticed until they’re no longer useful. Compared to previous weeks, I found myself tossing out more lightweight, disposable items. These are items that served a fleeting purpose before becoming waste. While I’ve been more mindful about reducing food packaging and single-use plastics, I was surprised by how many small, seemingly insignificant items still accumulated throughout the week. This made me reflect on how much invisible waste we generate.
 	</p>
-	<p>My items this week are: <a href="https://en.wikipedia.org/wiki/Ribbon">Gift Ribbon</a>, <a href="https://en.wikipedia.org/wiki/Lion_Brand_Yarns">Lion Brand Yarn Label</a>, <a href="https://www.littlehottieswarmers.com/">Toe Warmers</a>, <a href="https://en.wikipedia.org/wiki/Sticker">Sticker</a>, <a href="https://en.wikipedia.org/wiki/Pom-pom">Pom pom</a>, <a href="https://en.wikipedia.org/wiki/Receipt">Receipt</a>, <a href="https://en.wikipedia.org/wiki/Pen">Pen</a>, <a href="https://en.wikipedia.org/wiki/Zipper_storage_bag">Small Plastic Bag</a>, <a href="https://en.wikipedia.org/wiki/Surgical_mask">Disposable Mask</a></p>
+	<p>My items this week are: <br><a href="https://en.wikipedia.org/wiki/Ribbon">Gift Ribbon</a>, <a href="https://en.wikipedia.org/wiki/Lion_Brand_Yarns">Lion Brand Yarn Label</a>, <a href="https://www.littlehottieswarmers.com/">Toe Warmers</a>, <a href="https://en.wikipedia.org/wiki/Sticker">Sticker</a>, <a href="https://en.wikipedia.org/wiki/Pom-pom">Pom pom</a>, <a href="https://en.wikipedia.org/wiki/Receipt">Receipt</a>, <a href="https://en.wikipedia.org/wiki/Pen">Pen</a>, <a href="https://en.wikipedia.org/wiki/Zipper_storage_bag">Small Plastic Bag</a>, <a href="https://en.wikipedia.org/wiki/Surgical_mask">Disposable Mask</a></p>
 	<p>
 	After reviewing my discards, I noticed three main categories: ephemeral objects, crafting objects, and functional items that have outlived their use. Each group reveals something about the ways we consume, create, and dispose of materials in our daily lives.
 	</p>
