--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 
 <p>TWP - Main Page</p>
 
-<p></p><a href="twp-demo.html">TWP - Home</a></p>
+<p></p><a href="twp-home.html">TWP - Home</a></p>
 
 <p></p><a href="twp-ugly.html">TWP - Ugly</a></p>
