--- a/index.html
+++ b/index.html
@@ -8,4 +8,6 @@
 
 <p></p><a href="twp-home.html">TWP - Home</a></p>
 
+<p></p><a href="twp-demo.html">TWP - Draft</a></p>
+
 <p></p><a href="twp-ugly.html">TWP - Ugly</a></p>
