--- a/twp-about.html
+++ b/twp-about.html
@@ -17,20 +17,30 @@
 
 	  	<nav class="sitenav"> 
 			<x><a href="twp-home.html">Latest</a></x>
-			<x><a href="twp-archive.html">Archive</a></x>
+			<x><a href="twp-archive.html">Map</a></x>
 			<x><a href="twp-theory.html">Theory</a></x>
 			<x><a href="twp-about.html">About</a></x>
+			<x><a href="twp-ugly.html">Ugly</a></x>
   		</nav> 
 		
 
 	</header><!-- site header ends -->
 	
 	<main> <!-- the main/page-specific TWP content starts here -->
+		
 
 	<header class="page-header">
 		<!-- contains main/h1 heading and page navigation menu -->
 	
-	<h1>Week 59<br><em>Cold Weather + Craft Supplies</em></h1>
+	<h1 id ="sec-author">About the Author</h1>
+	
+	<img class="center" src="images/aboutIMG.png" width="400" alt="cartoon image of Max">
+	
+	<p>Hi! My name is Max and I am a junior at Rutgers University studying Computer Science + Information Technology and Informatics with a minor in Women's Gender and Sexuality Studies. In my free time I like to crochet, knit, listen to music, draw, watch horror movies, and play video games. I'm from northern New Jersey, born and raised. For high school I went to a tech school where you become specialized in a concentration so I have prior programming knowledge. I learned how to program in Python, JavaScript, Java, HTML, and C# in high school and when I started college I learned more Java, C, and Linux. Other than my programming skills, I like to keep myself well-rounded and do humanities/art/creative classes because I think the skills are very important. I am also part of the executive board for Queer and Asian (secretary) and Triota Honor Society (vice president), as well as a graphic design associate for the Rutgers Esports Club. In general, I like combining many different aspects of my interests into the work I produce.</p>
+	
+	<p>Here is a link to my Github: <a href="https://github.com/maxmendez13"><c>maxmendez13</c></a></p>
+		
+	<p><x><a href="#">Return to top</a></x></p>
 	
 	</header>
 	</main>
