--- a/twp-archive.html
+++ b/twp-archive.html
@@ -17,21 +17,34 @@
 
 	  	<nav class="sitenav"> 
 			<x><a href="twp-home.html">Latest</a></x>
-			<x><a href="twp-archive.html">Archive</a></x>
+			<x><a href="twp-archive.html">Map</a></x>
 			<x><a href="twp-theory.html">Theory</a></x>
 			<x><a href="twp-about.html">About</a></x>
+			<x><a href="twp-ugly.html">Ugly</a></x>
   		</nav> 
 		
 
 	</header><!-- site header ends -->
 	
 	<main> <!-- the main/page-specific TWP content starts here -->
-
 	<header class="page-header">
 		<!-- contains main/h1 heading and page navigation menu -->
 	
-	<h1>Week 59<br><em>Cold Weather + Craft Supplies</em></h1>
-	
+	<h1>The Path of My Trash</h1>
+	<div class="center">
+	<img src="images/trash1.jpg" alt="Trash in My Room">
+		<br>
+		<p>Where the trash usually starts on its journey, in my own room's trash can.</p>
+	<img src="images/trash2.jpg" alt="Trash Room Outside">
+		<br>
+		<p>Stepping outside my room and taking a 30 second walk brings us right outside the trash room.</p>
+	<img src="images/trash3.jpg" alt="Trash Area">
+		<br>
+		<p>Inside there is a designated trash area that is pretty large.</p>
+	<img src="images/trash4.jpg" alt="Recycling Area">
+		<p>On the other side is a much smaller recycleables area, makes you wonder why it's smaller than the trash area.</p>
+	</div>
+
 	</header>
 	</main>
 	</div>
