--- a/twp-home.html
+++ b/twp-home.html
@@ -3,23 +3,26 @@
 <head>
 <meta charset="utf-8">
 <title>Trash of the Week | Week 59</title>
+	
+	
 	<link rel="stylesheet" href="twp.css" type="text/css">
 </head>
 
 <body>
-	
+	<script src="https://kit.fontawesome.com/47294ac268.js" crossorigin="anonymous"></script>
 	<div class="wrapper">
 		
 	<header class="site-header">
 		<!-- contains site logo, site navigation = links to other pages on the site -->
 
-	  	<a href="index.html" class="site-logo"> <img class="site-logo-image" src="images/site-logo.svg" alt="Trash of the Week"> </a> 
+	  	<a href="index.html" class="site-logo"> <img class="site-logo-image" src="images/site-logo.svg" alt="Name of Website"> </a> 
 
 	  	<nav class="sitenav"> 
 			<x><a href="twp-home.html">Latest</a></x>
-			<x><a href="twp-archive.html">Archive</a></x>
+			<x><a href="twp-archive.html">Map</a></x>
 			<x><a href="twp-theory.html">Theory</a></x>
 			<x><a href="twp-about.html">About</a></x>
+			<x><a href="twp-ugly.html">Ugly</a></x>
   		</nav> 
 		
 
@@ -33,14 +36,16 @@
 	<h1>Week 59<br><em>Cold Weather + Craft Supplies</em></h1>
 
 	</header>
-	<img src="images/headerIMG.jpeg" width="950px" style="align-content: center;padding: 10px">
+	<img src="images/headerIMG.jpg" class="center" width="800px" style="center" alt="image of trash landfill">
 		
+	<br>
 		
 	<nav>
 		<x><a href="#sec-preface">Preface</a></x>  |
 		<x><a href="#sec-overview">Overview</a></x>  |
 		<x><a href="#sec-gallery">Gallery</a></x>  |
 		<x><a href="#sec-item-data">Item Data</a></x>  |
+		<x><a href="#sec-profile">Profile</a></x>  |
 		<x><a href="#sec-coda">Coda</a></x>
 	</nav>
 	
@@ -51,7 +56,7 @@
 	</p><p>
 	This project is also about storytelling. Every object we discard has a history, such as where it came from, how it was used, and why it was ultimately deemed unnecessary. By sharing these stories, I invite others to think more critically about their own waste. Maybe someone scrolling through my posts will notice something familiar and reflect on their own habits. Maybe they’ll share their thoughts, and we can start a conversation about sustainability, minimalism, or even the emotional weight of letting things go.
 	</p><p>
-	Trash is an unavoidable part of life, but it doesn’t have to be mindless. By making it visible, we give it meaning and maybe can learn something in the process.
+	Trash is an unavoidable part of life, but it doesn’t have to be mindless. By making it visible, we give it meaning and maybe can learn something in the process...<a href="twp-archive.html"><c>Keep Reading</c></a>
 	</p>
 	
 	<p><x><a href="#">Return to top</a></x></p>
@@ -61,7 +66,7 @@
 	<p>
 	This week’s discarded items tell a story of small, everyday objects that often go unnoticed until they’re no longer useful. Compared to previous weeks, I found myself tossing out more lightweight, disposable items. These are items that served a fleeting purpose before becoming waste. While I’ve been more mindful about reducing food packaging and single-use plastics, I was surprised by how many small, seemingly insignificant items still accumulated throughout the week. This made me reflect on how much invisible waste we generate.
 	</p>
-	<p>My items this week are: <br><a href="https://en.wikipedia.org/wiki/Ribbon">Gift Ribbon</a>, <a href="https://en.wikipedia.org/wiki/Lion_Brand_Yarns">Lion Brand Yarn Label</a>, <a href="https://www.littlehottieswarmers.com/">Toe Warmers</a>, <a href="https://en.wikipedia.org/wiki/Sticker">Sticker</a>, <a href="https://en.wikipedia.org/wiki/Pom-pom">Pom pom</a>, <a href="https://en.wikipedia.org/wiki/Receipt">Receipt</a>, <a href="https://en.wikipedia.org/wiki/Pen">Pen</a>, <a href="https://en.wikipedia.org/wiki/Zipper_storage_bag">Small Plastic Bag</a>, <a href="https://en.wikipedia.org/wiki/Surgical_mask">Disposable Mask</a></p>
+	<p>My items this week are: <br><a href="https://en.wikipedia.org/wiki/Ribbon"><c>Gift Ribbon</c></a>, <a href="https://en.wikipedia.org/wiki/Lion_Brand_Yarns"><c>Lion Brand Yarn Label</c></a>, <a href="https://www.littlehottieswarmers.com/"><c>Toe Warmers</c></a>, <a href="https://en.wikipedia.org/wiki/Sticker"><c>Sticker</c></a>, <a href="https://en.wikipedia.org/wiki/Pom-pom"><c>Pom pom</c></a>, <a href="https://en.wikipedia.org/wiki/Receipt"><c>Receipt</c></a>, <a href="https://en.wikipedia.org/wiki/Pen"><c>Pen</c></a>, <a href="https://en.wikipedia.org/wiki/Zipper_storage_bag"><c>Small Plastic Bag</c></a>, <a href="https://en.wikipedia.org/wiki/Surgical_mask"><c>Disposable Mask</c></a></p>
 	<p>
 	After reviewing my discards, I noticed three main categories: ephemeral objects, crafting objects, and functional items that have outlived their use. Each group reveals something about the ways we consume, create, and dispose of materials in our daily lives.
 	</p>
@@ -89,29 +94,30 @@
 	
 	<h2 id ="sec-gallery">Gallery</h2>
 	<div class="gallery-grid">
-	<div class="gallery-item"><img src="images/IMG_1223.jpg" width="300px">
+	<div class="gallery-item"><img src="images/ribbon.jpg" alt="image of ribbon">
 		<p>Gift Ribbon</p></div>
-	<div class="gallery-item"><img src="images/IMG_1224.jpg" width="300px">
+	<div class="gallery-item"><img src="images/label.jpg" alt="image of lion brand yarn label">
 		<p>Lion Brand Yarn Label</p></div>
-	<div class="gallery-item"><img src="images/IMG_1225.jpg" width="300px">
+	<div class="gallery-item"><img src="images/pompom.jpg" alt="image of pom pom">
 		<p>Pom Pom</p></div>
-	<div class="gallery-item"><img src="images/IMG_1226.jpg" width="300px">
+	<div class="gallery-item"><img src="images/receipt.jpg" alt="image of receipt">
 		<p>Receipt</p></div>
-	<div class="gallery-item"><img src="images/IMG_1227.jpg" width="300px">
+	<div class="gallery-item"><img src="images/pen.jpg" alt="image of pen">
 		<p>Pen</p></div>
-	<div class="gallery-item"><img src="images/IMG_1228.jpg" width="300px">
+	<div class="gallery-item"><img src="images/bag.jpg" alt="image of small plastic bag">
 		<p>Small Plastic Bag</p></div>
-	<div class="gallery-item"><img src="images/IMG_1229.jpg" width="300px">
+	<div class="gallery-item"><img src="images/mask.jpg" alt="image of disposable mask">
 		<p>Disposable Mask</p></div>
-	<div class="gallery-item"><img src="images/IMG_1230.jpg" width="300px">
+	<div class="gallery-item"><img src="images/sticker.jpg" alt="image of boba sticker">
 		<p>Sticker</p></div>
-	<div class="gallery-item"><img src="images/IMG_1231.jpg" width="300px">
+	<div class="gallery-item"><img src="images/warmer.jpg" alt="image of toe warmers">
 		<p>Toe Warmer</p></div>
 	</div><!-- gallery grid ends -->
 	<p><x><a href="#">Return to top</a></x></p>
 	
 	<h2 id ="sec-item-data">Item Data</h2>
 	
+	<div class="center">
 	<table class="table table-bordered table-hover table-condensed">
 	<thead><tr><th title="Field #1">Item</th>
 	<th title="Field #2">Weight</th>
@@ -120,6 +126,7 @@
 	<th title="Field #5">Cost</th>
 	<th title="Field #6">Owned For</th>
 	<th title="Field #7">Mode of Disposal</th>
+	<th title="Field #8">Reason for Disposal</th>
 	</tr></thead>
 	<tbody><tr>
 	<td>Gift Ribbon</td>
@@ -128,7 +135,10 @@
 	<td>Desk Drawer</td>
 	<td>$0</td>
 	<td>3 weeks</td>
-	<td>Trash</td>
+	<td>
+		<i class="fa-solid fa-gift"></i>
+	</td>
+	<td>Used for gift decor</td>
 	</tr>
 	<tr>
 	<td>Disposable Mask</td>
@@ -137,34 +147,46 @@
 	<td>Bag Pocket</td>
 	<td>$1</td>
 	<td>2 months</td>
-	<td>Trash</td>
+	<td>
+		<i class="fa-solid fa-trash-can"></i>
+	</td>
+	<td>Used during the day</td>
 	</tr>
 	<tr>
-	<td>Small Plastic Bag (Earrings)</td>
+	<td>Small Plastic Bag</td>
 	<td>~2g</td>
 	<td>Jewelry Store Purchase</td>
 	<td>Jewelry Box</td>
 	<td>$0</td>
 	<td>1 week</td>
-	<td>Trash</td>
+	<td>
+		<i class="fa-solid fa-gift"></i>
+	</td>
+	<td>Used for earrings</td>
 	</tr>
 	<tr>
-	<td>Pen (Ran Out of Ink)</td>
+	<td>Pen</td>
 	<td>~15g</td>
 	<td>Rutgers Involvement Fair</td>
 	<td>Pencil Case</td>
 	<td>$0</td>
 	<td>6 months</td>
-	<td>Trash</td>
+	<td>
+		<i class="fa-solid fa-trash-can"></i>
+	</td>
+	<td>Ran out of ink</td>
 	</tr>
 	<tr>
-	<td>Receipt (Croissant)</td>
+	<td>Receipt</td>
 	<td>~3g</td>
 	<td>Cafe West</td>
 	<td>Wallet</td>
 	<td>$5</td>
 	<td>1 day</td>
-	<td>Trash</td>
+	<td>
+		<i class="fa-solid fa-recycle"></i>
+	</td>
+	<td>Used to pay for croissant</td>
 	</tr>
 	<tr>
 	<td>Pink Pom-Pom Ball</td>
@@ -173,7 +195,10 @@
 	<td>Desk Drawer</td>
 	<td>$0.50</td>
 	<td>4 months</td>
-	<td>Trash</td>
+	<td>
+	<i class="fa-solid fa-gift"></i>	
+	</td>
+	<td>Used for gift decor</td>
 	</tr>
 	<tr>
 	<td>Lion Brand Yarn Label</td>
@@ -182,7 +207,10 @@
 	<td>Craft Box</td>
 	<td>$0</td>
 	<td>2 weeks</td>
-	<td>Recycled</td>
+	<td>
+	<i class="fa-solid fa-recycle"></i>	
+	</td>
+	<td>Label no longer needed</td>
 	</tr>
 	<tr>
 	<td>Toe Warmers Packet</td>
@@ -191,9 +219,15 @@
 	<td>Coat Pocket</td>
 	<td>$3</td>
 	<td>1 day</td>
-	<td>Trash</td>
+	<td>
+		<i class="fa-solid fa-trash-can"></i>
+	</td>
+	<td>Used to stay warm</td>
 	</tr>
 	</tbody></table>
+	</div>
+		
+		<p><strong>Legend:</strong> Trash <i class="fa-solid fa-trash-can"></i> Recycle <i class="fa-solid fa-recycle"></i> Gift <i class="fa-solid fa-gift"></i></p>
 	
 	<h3>Lightest to Heaviest</h3>
 	<ol>
@@ -224,25 +258,39 @@
 	<p><x><a href="#">Return to top</a></x></p>
 	
 	
+	<h2 id ="sec-profile">Profile</h2>
+	
+	<div class="center">
+	<h3>Featured Item of the Week: Disposable Mask</h3>
+		
+	<img src="images/mask.jpg" alt="image of disposable mask">
+	</div>
+	<p>
+		I chose the disposable mask as this week’s featured item because it represents a shift in how we navigate the world. Five years ago, I never would have imagined regularly carrying, wearing, and discarding masks. But now, they’ve become a part of everyday life as they are an object both essential and single-use. This particular mask had been sitting in my bag for months, a backup for emergencies. It had softened over time, its ear loops stretched, its fabric slightly crumpled from being folded and refolded. When I finally threw it away, it felt like the end of a small but significant chapter in my personal pandemic experience.</p>
+
+	<p>
+		I bought this mask in a rush, grabbing a pack of five at the drugstore when I realized I had forgotten my reusable one at home. It was lightweight, generic, and meant for one-time use but like many of us, I stretched that “one-time use” to multiple wears, relying on its durability beyond its intended lifespan. It traveled with me, tucked into my pocket or bag, used in crowded places when I felt uneasy, and eventually crushed at the bottom of my backpack under notebooks and laptop. By the time I discarded it, the mask had lost its integrity because it had frayed edges, weakened loops, and an overall worn-out look that signaled it was time to let go.</p>
+
+	<p>
+		Face masks have a long history in public health, dating back to the 19th century when doctors began using them to prevent infection. The modern disposable surgical mask, similar to the one I discarded, was first introduced in the 1960s and became standard in hospitals due to its effectiveness in filtering airborne particles. However, it wasn’t until the COVID-19 pandemic that disposable masks became everyday items, mass-produced in the billions and worn worldwide.</p>
+
+	<p>
+		While effective at reducing disease transmission, disposable masks pose an environmental challenge. Most are made of polypropylene, a type of plastic that does not biodegrade easily. Instead, they break down into microplastics, contributing to pollution in landfills and oceans. Scientists have found discarded masks entangling wildlife and contaminating water sources, raising concerns about the long-term impact of this new form of waste. Some countries have introduced recycling programs for masks, but the majority still end up in the trash, much like mine did.</p>
+	
+	<p><x><a href="#">Return to top</a></x></p>
+		
 	<h2 id ="sec-coda">Coda</h2>
 	
-	<p>Sentences of reflection and fairwell</p>
+	<p>This week’s collection of discarded objects made me think about the small, often invisible waste we generate. The disposable mask stood out as a particularly interesting example, a symbol of both necessity and disposability.</p>
+
+	<p>Looking ahead to next week, I plan to pay closer attention to the hidden waste in my daily routine, such as the things I don’t think twice about discarding. If you’ve been following along, I’d love to hear your thoughts: What’s the most unexpected thing you’ve thrown away recently? Drop a comment or share your own trash stories. See you next week!</p>
 	
 	<p><x><a href="#">Return to top</a></x></p>
 	
-	<h2 id ="sec-author">About the Author</h2>
-	
-	<img src="images/IMG_9911.jpg" width="200">
-	
-	<p>Hi! My name is Max and I am a junior at Rutgers University studying Computer Science + Information Technology and Informatics with a minor in Women's Gender and Sexuality Studies. In my free time I like to crochet, knit, listen to music, draw, watch horror movies, and play video games. I'm from northern New Jersey, born and raised. For high school I went to a tech school where you become specialized in a concentration so I have prior programming knowledge. I learned how to program in Python, JavaScript, Java, HTML, and C# in high school and when I started college I learned more Java, C, and Linux. Other than my programming skills, I like to keep myself well-rounded and do humanities/art/creative classes because I think the skills are very important. I am also part of the executive board for Queer and Asian (secretary) and Triota Honor Society (vice president), as well as a graphic design associate for the Rutgers Esports Club. In general, I like combining many different aspects of my interests into the work I produce.</p>
-	
-	<p>Here is a link to my Github: <a href="https://github.com/maxmendez13">maxmendez13</a></p>
-		
-	<p><x><a href="#">Return to top</a></x></p>
 		
 	</main>
 		
-	<footer>Nothing here yet</footer> <!-- site(wide) footer -->	
+	<footer>Enjoyed what you read here? Leave a <i class="fa-solid fa-thumbs-up"></i> on my page and join me every Sunday for more Weekly Waste Watch!</footer> <!-- site(wide) footer -->	
 		
 	
 	</div> <!-- wrapper -->
