--- a/twp-ugly.html
+++ b/twp-ugly.html
@@ -49,6 +49,21 @@
 </head>
 
 <body>
+	<header class="site-header">
+		<!-- contains site logo, site navigation = links to other pages on the site -->
+
+	  	<a href="index.html" class="site-logo"> <img class="site-logo-image" src="images/site-logo.svg" alt="Name of Website"> </a> 
+
+	  	<nav class="sitenav"> 
+			<x><a href="twp-home.html">Latest</a></x>
+			<x><a href="twp-archive.html">Map</a></x>
+			<x><a href="twp-theory.html">Theory</a></x>
+			<x><a href="twp-about.html">About</a></x>
+			<x><a href="twp-ugly.html">Ugly</a></x>
+  		</nav> 
+		
+
+	</header><!-- site header ends -->
 	<h1>Week 59<br><em>Cold Weather and Craft Supplies</em></h1>
 	
 	<nav>
