--- a/index.html
+++ b/index.html
@@ -11,3 +11,5 @@
 <p></p><a href="twp-demo.html">TWP - Draft</a></p>
 
 <p></p><a href="twp-ugly.html">TWP - Ugly</a></p>
+
+<p></p><a href="home-page.html">Final - Homepage</a></p>
