--- a/home-page.html
+++ b/home-page.html
@@ -16,7 +16,7 @@
         <ul>
           <li><a href="reviews.html">Reviews</a></li>
           <li><a href="gallery.html">Gallery</a></li>
-          <li><a href="starter-kit.html">Starter Kit</a></li>
+          <li><a href="map.html">Map</a></li>
           <li><a href="about.html">About</a></li>
         </ul>
       </nav>
