--- a/home-page.html
+++ b/home-page.html
@@ -14,10 +14,11 @@
         <a href="index.html"><img src="finalImgs/final site logo.svg" alt="Horror's House" />
         </a>
         <ul>
-          <li><a href="reviews.html">Reviews</a></li>
-          <li><a href="gallery.html">Gallery</a></li>
-          <li><a href="map.html">Map</a></li>
-          <li><a href="about.html">About</a></li>
+			<li><a href="home-page.html">Home</a></li>
+          <li><a href="review-page.html">Reviews</a></li>
+          <li><a href="gallery-page.html">Gallery</a></li>
+          <li><a href="map-page.html">Map</a></li>
+          <li><a href="about-page.html">About</a></li>
         </ul>
       </nav>
     </header>
@@ -28,7 +29,7 @@
 
 			<p class="secondary-statement">It's more likely than you think.</p>
 
-			<div class="lead-display">
+			<div class="lead">
 				<img src="finalImgs/imaging ny nj header.jpg" alt="Big Picture of Something to do with the site." width="1080px">  <!-- visual lead -->
 			</div>
 
