--- a/gallery-page.html
+++ b/gallery-page.html
@@ -38,54 +38,21 @@
 	
 		</section><!-- lead section ends -->
 
-		<section class="showcase">
-
-
-			<div class="showcase-item" id="showcase-item-1">
-
-				<h3>Manhattan's Manslaughter</h3>
-
-				<!-- image -->
-
-				<a href=""><img src="finalImgs/patrick img2.jpg" alt="Representative preview image (not a screenshot)"></a>
-
-				<p>The films featured here take place in the Big Apple, NYC. While navigating through the bustling city, these monsters took advantage of the vulnerable while killing left and right.</p>
-
-				<p><a href="">Take a look...</a></p><!-- the link can also be incorporated into the paragraph of enhancing text above -->
-
-			</div><!-- showcase item ends-->
-
-			
-			<div class="showcase-item" id="showcase-item-2">
-
-				<h3>New Jersey Suburbs</h3>
-
-				<!-- page preview image -->
-
-				<a href=""><img src="finalImgs/myers img4.jpg" alt="Representative preview image (not a screenshot)"></a>
-
-				<p>In these New Jersey suburbs, the worst villains can be seen wreaking havoc on white pickett fences. These settings are particularly scary because they are happening right in your home.</p>
-
-				<p><a href="">Take a look...</a></p><!-- the link can also be incorporated into the paragraph of enhancing text above -->
-
-			</div><!-- showcase item ends-->
-
-			<div class="showcase-item" id="showcase-item-3">
-
-				<h3>Isolated Environments</h3>
-
-				<!-- page preview image -->
-
-				<a href=""><img src="finalImgs/amityville img3.jpg" alt="Representative preview image (not a screenshot)"></a>
-
-				<p>These films are located in very rural, closed-off areas that add to the creepiness of being alone. States that are full of bustling cities like New York and New Jersey do indeed have rural farm areas!</p>
-
-				<p><a href="">Take a look...</a></p><!-- the link can also be incorporated into the paragraph of enhancing text above -->
-
-			</div><!-- showcase item ends-->
-
-		</section><!-- showcase ends -->
-
+		<h2 id ="sec-gallery">Gallery</h2>
+		<div class="gallery-grid">
+		<div class="gallery-item"><img src="finalImgs/jason img1.jpg" alt="Jason Takes Over Manhattan">
+			<p>Jason Takes Over Manhattan</p></div>
+		<div class="gallery-item"><img src="finalImgs/patrick img2.jpg" alt="American Psycho">
+			<p>American Psycho</p></div>
+		<div class="gallery-item"><img src="finalImgs/amityville img3.jpg" alt="Amityville Horror">
+			<p>Amityville Horror</p></div>
+		<div class="gallery-item"><img src="finalImgs/myers img4.jpg" alt="Halloween">
+			<p>Halloween</p></div>
+		<div class="gallery-item"><img src="finalImgs/camp img5.jpg" alt="Friday the 13th">
+			<p>Friday the 13th</p></div>
+		<div class="gallery-item"><img src="finalImgs/chucky img6.jpg" alt="Bride of Chucky">
+			<p>Bride of Chucky</p></div>
+		  </div>
       </main>
 	  
       <footer>
@@ -97,6 +64,6 @@
       
 	  </footer>
     
-	</div> <!-- wrapper ends -->
+	 <!-- wrapper ends -->
   </body>
 </html>
