--- a/gallery-page.html
+++ b/gallery-page.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
   	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Website Name - Home</title>
+	<title>Horror's House - Gallery</title>
     <link rel="stylesheet" href="final.css" type="text/css">
   </head>
   <body>
-     <!-- Site Header -->
+  <!-- Site Header -->
     <header>
       <nav>
         <a href="index.html"><img src="finalImgs/final site logo.svg" alt="Horror's House" />
@@ -22,23 +22,12 @@
         </ul>
       </nav>
     </header>
-	  <main>
-        <section class="lead">
+	<div class = "wrapper">
+	  <main>	
 
-			<h1 class="primary-statement">Is your home state haunted?</h1>
-
-			<p class="secondary-statement">It's more likely than you think.</p>
-
-			<div class="lead">
-				<img src="finalImgs/imaging ny nj header.jpg" alt="Big Picture of Something to do with the site." width="1080px">  <!-- visual lead -->
-			</div>
-
-			<p>New York and New Jersey are home to many horror films. From Bride of Chucky to Friday the 13th, these movies are what make the Northeast feel like home. It's always fun to watch movies and point at the screen, thinking "Hey, I know that place!" and it's even more fun when there is a goofy-looking killer on the loose in the local neighborhood. I am setting off to chase that feeling and possibly reveal some scary locations that you didn't know took place in the Empire State and Garden State. </p>
-			<p></p>
-	
-		</section><!-- lead section ends -->
-
-		<h2 id ="sec-gallery">Gallery</h2>
+		<h1>The Gorey Gallery</h1>
+		  
+		<article class="review">
 		<div class="gallery-grid">
 		<div class="gallery-item"><img src="finalImgs/jason img1.jpg" alt="Jason Takes Over Manhattan">
 			<p>Jason Takes Over Manhattan</p></div>
@@ -53,8 +42,9 @@
 		<div class="gallery-item"><img src="finalImgs/chucky img6.jpg" alt="Bride of Chucky">
 			<p>Bride of Chucky</p></div>
 		  </div>
+		  </article>
       </main>
-	  
+	  </div>
       <footer>
 	  
 		<p>&copy; 2024 by Biteback Co. All rights reserved.</p>
