--- a/home-page.html
+++ b/home-page.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
   	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Website Name - Home</title>
+	<title>Horror's House - Home</title>
     <link rel="stylesheet" href="final.css" type="text/css">
   </head>
   <body>
@@ -29,15 +29,16 @@
 
 			<p class="secondary-statement">It's more likely than you think.</p>
 
-			<div class="lead">
-				<img src="finalImgs/imaging ny nj header.jpg" alt="Big Picture of Something to do with the site." width="1080px">  <!-- visual lead -->
-			</div>
-
+			<div class="wrapper">
 			<p>New York and New Jersey are home to many horror films. From Bride of Chucky to Friday the 13th, these movies are what make the Northeast feel like home. It's always fun to watch movies and point at the screen, thinking "Hey, I know that place!" and it's even more fun when there is a goofy-looking killer on the loose in the local neighborhood. I am setting off to chase that feeling and possibly reveal some scary locations that you didn't know took place in the Empire State and Garden State. </p>
 			<p></p>
-	
+		</div>
 		</section><!-- lead section ends -->
 
+		<div class="lead">
+			<img src="finalImgs/imaging ny nj header.jpg" alt="Imaging Horror in New York and New Jersey" width="1080px">  <!-- visual lead -->
+		</div>
+		  
 		<section class="showcase">
 
 
