--- a/about-page.html
+++ b/about-page.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
   	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Website Name - Home</title>
+	<title>Horror's House - About</title>
     <link rel="stylesheet" href="final.css" type="text/css">
   </head>
   <body>
@@ -23,64 +23,47 @@
       </nav>
     </header>
 	  <main>
-        <section class="lead">
-
-			<h1 class="primary-statement">Is your home state haunted?</h1>
-
-			<p class="secondary-statement">It's more likely than you think.</p>
-
-			<div class="lead">
-				<img src="finalImgs/imaging ny nj header.jpg" alt="Big Picture of Something to do with the site." width="1080px">  <!-- visual lead -->
-			</div>
-
-			<p>New York and New Jersey are home to many horror films. From Bride of Chucky to Friday the 13th, these movies are what make the Northeast feel like home. It's always fun to watch movies and point at the screen, thinking "Hey, I know that place!" and it's even more fun when there is a goofy-looking killer on the loose in the local neighborhood. I am setting off to chase that feeling and possibly reveal some scary locations that you didn't know took place in the Empire State and Garden State. </p>
-			<p></p>
-	
-		</section><!-- lead section ends -->
-
+        
+		  
 		<section class="showcase">
 
 
 			<div class="showcase-item" id="showcase-item-1">
 
-				<h3>Manhattan's Manslaughter</h3>
+				<h3>Nica Pierce</h3>
 
 				<!-- image -->
 
-				<a href=""><img src="finalImgs/patrick img2.jpg" alt="Representative preview image (not a screenshot)"></a>
+				<a href=""><img src="" alt="Nica"></a>
 
-				<p>The films featured here take place in the Big Apple, NYC. While navigating through the bustling city, these monsters took advantage of the vulnerable while killing left and right.</p>
-
-				<p><a href="">Take a look...</a></p><!-- the link can also be incorporated into the paragraph of enhancing text above -->
+				<p>My name is Nica and I am the lead writer. I have spent years recording all of the horror spots local to New York and New Jersey. I've been from Brick to Brooklyn, from Poughkeepsie to Passaic searching for the sets of slashers and other horror movies...and sometimes the horrors find me. I will continue to document these frightful areas before the evils eventually claim me.</p>
 
 			</div><!-- showcase item ends-->
 
 			
 			<div class="showcase-item" id="showcase-item-2">
 
-				<h3>New Jersey Suburbs</h3>
+				<h3>Kirsty Cotton</h3>
 
 				<!-- page preview image -->
 
-				<a href=""><img src="finalImgs/myers img4.jpg" alt="Representative preview image (not a screenshot)"></a>
+				<a href=""><img src="" alt="Kirsty"></a>
 
 				<p>In these New Jersey suburbs, the worst villains can be seen wreaking havoc on white pickett fences. These settings are particularly scary because they are happening right in your home.</p>
 
-				<p><a href="">Take a look...</a></p><!-- the link can also be incorporated into the paragraph of enhancing text above -->
 
 			</div><!-- showcase item ends-->
 
 			<div class="showcase-item" id="showcase-item-3">
 
-				<h3>Isolated Environments</h3>
+				<h3>Jesse Walsh</h3>
 
 				<!-- page preview image -->
 
-				<a href=""><img src="finalImgs/amityville img3.jpg" alt="Representative preview image (not a screenshot)"></a>
+				<a href=""><img src="" alt="Jesse"></a>
 
 				<p>These films are located in very rural, closed-off areas that add to the creepiness of being alone. States that are full of bustling cities like New York and New Jersey do indeed have rural farm areas!</p>
 
-				<p><a href="">Take a look...</a></p><!-- the link can also be incorporated into the paragraph of enhancing text above -->
 
 			</div><!-- showcase item ends-->
 
