--- a/home-page.html
+++ b/home-page.html
@@ -34,10 +34,10 @@
 			<p></p>
 		</div>
 		</section><!-- lead section ends -->
+	
 
-		<div class="lead">
-			<img src="finalImgs/imaging ny nj header.jpg" alt="Imaging Horror in New York and New Jersey" width="1080px">  <!-- visual lead -->
-		</div>
+		<img src="finalImgs/imaging ny nj header.jpg" alt="Imaging Horror in New York and New Jersey">  <!-- visual lead -->
+
 		  
 		<section class="showcase">
 
